--- a/templates/verify.html
+++ b/templates/verify.html
@@ -23,7 +23,7 @@
                 <p><strong>Issue Date:</strong> {{ certificate[4] }}</p>
                 {% if certificate[5] %}
                     <p><strong>Certificate Image:</strong></p>
-                    <img src="{{ certificate[5] }}" alt="Certificate Image">
+                    <img src="{{ url_for('static', filename=certificate[5].split('/')[-1]) }}" alt="Certificate Image">
                 {% endif %}
                 <p><strong>Other Details:</strong> {{ certificate[6] }}</p>
             </div>
